# moveit_r2

r2_legs_moveit_config/: CMakeLists.txt  package.xml
r2_legs_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_constrained_planning.yaml  ompl_planning.yaml  r2c_legs.srdf
r2_legs_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_constrained_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  r2c_legs_moveit_controller_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
r2_legs_nostand_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
r2_legs_nostand_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  r2c_full_body.srdf  rice_ompl_planning.yaml
r2_legs_nostand_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group.launch~  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  rice_moveit_ompl_planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
r2_moveit_config/: .setup_assistant  package.xml
r2_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_constrained_planning.yaml  ompl_planning.yaml  r2c_full_body.srdf  rice_ompl_planning.yaml
r2_moveit_config/launch/: default_warehouse_db.launch  demo.launch  move_group.launch  moveit.rviz  new_ompl_planning_pipeline.launch.xml  ompl_constrained_planning_pipeline.launch.xml  planning_context.launch  r2c_full_body_moveit_controller_manager.launch.xml  sensor_manager.launch.xml  trajectory_execution.launch.xml
r2_moveit_plugins/moveit_r2_constraint_sampler/: CMakeLists.txt  moveit_r2_constraint_sampler_plugin_description.xml  package.xml
r2_moveit_plugins/moveit_r2_constraint_sampler/include/moveit_r2_constraints/: r2_constraint_sampler.h
r2_moveit_plugins/moveit_r2_constraint_sampler/src/: r2_constraint_sampler.cpp
r2_moveit_plugins/moveit_r2_kinematics/: CMakeLists.txt  moveit_r2_chain_kinematics_plugin_description.xml  moveit_r2_tree_kinematics_plugin_description.xml  package.xml  r2_kdl_kinematics_plugin_description.xml
r2_moveit_plugins/moveit_r2_kinematics/include/: chainiksolver_pos_nr_jl_mimic.hpp  chainiksolver_vel_pinv_mimic.hpp  joint_mimic.hpp  moveit_r2_chain_kinematics.h  moveit_r2_tree_kinematics.h  r2_kdl_kinematics_plugin.h  tree_kinematics_tolerances.h
r2_moveit_plugins/moveit_r2_kinematics/include/moveit_r2_kinematics/: chainiksolver_pos_nr_jl_mimic.hpp  chainiksolver_vel_pinv_mimic.hpp  moveit_r2_chain_kinematics.h  moveit_r2_tree_kinematics.h  r2_kdl_kinematics_plugin.h  tree_kinematics_tolerances.h
r2_moveit_plugins/moveit_r2_kinematics/src/: chainiksolver_pos_nr_jl_mimic.cpp  chainiksolver_vel_pinv_mimic.cpp  moveit_r2_chain_kinematics.cpp  moveit_r2_tree_kinematics.cpp  r2_kdl_kinematics_plugin.cpp
r2_moveit_plugins/moveit_r2_pose_sampler/: CMakeLists.txt  moveit_r2_pose_sampler_plugin_description.xml  package.xml
r2_moveit_plugins/moveit_r2_pose_sampler/include/moveit_r2_constraints/: r2_pose_sampler.h
r2_moveit_plugins/moveit_r2_pose_sampler/src/: r2_pose_sampler.cpp
r2_moveit_plugins/r2_controller_manager/: CMakeLists.txt  package.xml  r2_moveit_controller_manager_plugin_description.xml
r2_moveit_plugins/r2_controller_manager/include/r2_controller_manager/: R2MoveitControllerManager.h
r2_moveit_plugins/r2_controller_manager/src/: R2MoveitControllerManager.cpp  r2_moveit_controller_manager.cpp
