<package>
  <name>moveit_r2_pose_sampler</name>
  <version>0.0.1</version>
  <description>Custom MoveIt! pose constraint sampler for R2</description>
  <maintainer email="rluna@rice.edu">Ryan Luna</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_r2_kinematics</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_r2_kinematics</run_depend>

  <export>
    <moveit_core plugin="${prefix}/moveit_r2_pose_sampler_plugin_description.xml"/>
  </export>
</package>
